# codoxel

./: .clang-format  CMakeLists.txt  README.md
cmake/: CPM.cmake
engine/include/: engine.h  renderer.h  utils.h
engine/src/: engine.c  impl.cpp  renderer.c
src/: main.c
